--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <link rel="apple-touch-icon" href="/logo-unified.png" />
     <meta name="theme-color" content="#10b981" />
     
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="NusantaraGo" />
+    
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="NusantaraGo - Jelajah Nusantara dengan AI" />
